Fixed 'More options' for IE/Edge, and developments on mobile layout
Added an alternative to 'classList.toggle' for IE/Edge for the more options box.
Also working on mobile layout - increased width of all content to 95vw for now/

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ footer div.spacer {
 /* end Footer */
 
 label {
+  -ms-user-select: none;
   user-select: none;
 }
 
@@ -188,28 +189,48 @@ div.basic-input > * {
 }
 
 .advanced-content {
+  /*display: none;*/
+  height: 0;
   width: 100%;
-  border: 1px solid #b2b2b2;
-  border-top: none;
-  display: none;
-  padding: 10px 20px 0px 20px;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 10px;
+  -webkit-transition: height 0.3s ease;
+  -moz-transition: height 0.3s ease;
+  -o-transition: height 0.3s ease;
+  -ms-transition: height 0.3s ease;
+  transition: height 0.2s ease-out;
 }
 
 .advanced-header.active + .advanced-content {
-  display: grid;
+  height: 79px;
+  margin-top: 0;
+  padding: 10px 20px 0px 20px;
+  border: 1px solid #b2b2b2;
+  border-top: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.advanced-content * {
+  display: none;
+}
+
+.advanced-header.active + .advanced-content > * {
+  display: inline-flex;
+  flex-basis: 50%;
+}
+
+.advanced-header.active + .advanced-content .advanced-input * {
+  display: block;
+  flex-basis: 50%;
 }
 
 .advanced-input {
   margin-bottom: 10px;
   margin-left: 0px;
-  display: block;
 }
 
-div.advanced-input > * {
+/*div.advanced-input > * {
   display: inline-block;
-}
+}*/
 /* end Advanced settings box */
 
 
@@ -304,7 +325,7 @@ label.radiobox-label:nth-of-type(2) {
   border: 1px solid #b2b2b2;
 }
 
-@media screen and (max-width: 817px) {
+@media screen and (max-width: 820px) {
   .mainContent {
     /*width: 100vw;*/
     width: 100%;
@@ -315,25 +336,25 @@ label.radiobox-label:nth-of-type(2) {
     width: 100%;
   }
   .introduction {
-    width: 90vw;
+    width: 95vw;
     margin: 20px auto;
   }
   .advanced-section {
-    width: 90vw;
+    width: 95vw;
   }
   .radiobox {
     margin: 0 auto;
     margin-top: 30px;
     float: none;
     min-width: 281px;
-    width: 90vw;
+    width: 95vw;
   }
   .bottom-wrapper {
     padding: 30px 0;
   }
   .inputs-section {
     margin: 0 auto;
-    width: 90vw;
+    width: 95vw;
   }
   .basic-input {
     display: inline-block;
@@ -350,9 +371,43 @@ label.radiobox-label:nth-of-type(2) {
     width: 100%;
   }
   #pieChart {
-    width: 90vw;
+    width: 95vw;
     margin: 0 auto;
     margin-top: 30px;
     display: block;
   }
+  .advanced-header.active + .advanced-content {
+    padding: 10px 5px 0px 5px;
+    height: auto;
+  }
+  input[type=checkbox] {
+    float:right;
+    margin: 8px auto 8px 5px;
+    height: 14px;
+    width: 14px;
+  }
+  .advanced-input * {
+    display: block;
+    overflow: hidden;
+  }
+  .advanced-input span.currency {
+    float: left;
+    margin: 2px auto 2px auto;
+  }
+  .advanced-input input[type=number], .advanced-input select {
+    margin-left: 0px;
+    height: 19px;
+    line-height: 19px;
+  }
+  .advanced-header.active + .advanced-content > * {
+    display: inline-block;
+  }
+  .advanced-content .maxwidth {
+    max-width: 150px;
+    margin-left: 0px;
+  }
+
+  /*.advanced-input > * {
+    margin: auto;
+  }*/
 }
